--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -1,5 +1,7 @@
 // You can add CSS rules here that will be inlucded in Hydejack's CSS file
-.avatar {
+
+/* Sidebar Game Title Image */
+.sidebar-about .avatar {
     max-width: 100%;
     border-radius: 0;
     width: auto;
